// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Jobs /> should render properly with jobs 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-137 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #73b61c;
}

.emotion-4:hover {
  background-color: #96c955;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  padding-left: 4px;
}

.emotion-136 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-6 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-6:nth-of-type(2) {
  width: 100%;
}

.emotion-6:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-14 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-14:nth-of-type(2) {
  width: 100%;
}

.emotion-14:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-134 {
  height: auto;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-134 tr {
  background-color: #252525;
}

.emotion-134 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-134 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-134 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-134 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-134 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-134 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-134 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-134 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-134 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-29 {
  cursor: pointer;
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #ebb52e;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17 {
  text-align: center;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 32px;
  height: 32px;
  padding: 6px;
  margin: -6px;
  border-radius: 32px;
  color: #c92300;
}

.emotion-19:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background-color: #191919;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-21 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-21:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-21:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-22 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #009f22;
}

.emotion-22:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-22:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-23 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #ebb52e;
}

.emotion-23:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-23:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-24 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #0074f5;
}

.emotion-24:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-24:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-28 {
  position: relative;
  height: 100%;
}

.emotion-27 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 6px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #191919;
  background-color: transparent;
  margin: -6px;
}

.emotion-27:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-27[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-27:hover,
.emotion-27.focus-visible:focus {
  color: #ffffff !important;
}

.emotion-30 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #b3b3b3;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-39 {
  height: 100%;
  -webkit-flex: 14 0 auto;
  -ms-flex: 14 0 auto;
  flex: 14 0 auto;
  background-color: #0074f5;
}

.emotion-39:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-39:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-45 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #009f22;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-52 {
  height: 100%;
  -webkit-flex: 8 0 auto;
  -ms-flex: 8 0 auto;
  flex: 8 0 auto;
  background-color: #009f22;
}

.emotion-52:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-52:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-53 {
  height: 100%;
  -webkit-flex: 4 0 auto;
  -ms-flex: 4 0 auto;
  flex: 4 0 auto;
  background-color: #0074f5;
}

.emotion-53:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-53:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-57 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #4a4a4a;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-67 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #c92300;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-79 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #191919;
  background-color: #ebb52e;
  font-family: Roboto Condensed;
}

.emotion-95 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #009f22;
}

.emotion-95:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-95:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
    className="emotion-137"
  >
    <div
      className="emotion-5"
    >
      <h3
        className="emotion-0"
      >
        Number of 
        Jobs
        : 
        11
      </h3>
      <button
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-3"
        >
          <svg
            className="emotion-1"
            color="#ffffff"
            data-file-name="refresh.svg"
            height={20}
          />
          <div
            className="emotion-2"
          >
            Refresh 
            Jobs
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-136"
    >
      <div
        className="emotion-135"
      >
        <table
          className="emotion-134"
        >
          <thead>
            <tr>
              <th
                className="emotion-6"
              >
                Status
              </th>
              <th
                className="emotion-6"
              >
                Job Name
              </th>
              <th
                className="emotion-6"
              >
                Priority
              </th>
              <th
                className="emotion-6"
              >
                Created
              </th>
              <th
                className="emotion-6"
              >
                # Assets
              </th>
              <th
                className="emotion-6"
              >
                Errors
              </th>
              <th
                className="emotion-6"
              >
                Task Progress
              </th>
              <th
                className="emotion-14"
              >
                <div
                  className="emotion-13"
                >
                  <svg
                    data-file-name="kebab.svg"
                    height={20}
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="emotion-29"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-15"
                >
                  In Progress
                </div>
              </td>
              <td>
                <a
                  className="emotion-16"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  test-whitespace.json
                </a>
              </td>
              <td
                className="emotion-17"
              >
                100
              </td>
              <td>
                2019-11-07 01:38:36
              </td>
              <td
                className="emotion-17"
              >
                4
              </td>
              <td>
                <div
                  className="emotion-20"
                >
                  <a
                    className="emotion-19"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/errors"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <svg
                      color="#c92300"
                      data-file-name="warning.svg"
                      height={20}
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-26"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-25"
                  >
                    <div
                      className="emotion-21"
                    />
                    <div
                      className="emotion-22"
                    />
                    <div
                      className="emotion-23"
                    />
                    <div
                      className="emotion-24"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  className="emotion-28"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-27"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              className="emotion-29"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-30"
                >
                  Cancelled
                </div>
              </td>
              <td>
                <a
                  className="emotion-16"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000955"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  test-whitespace.json
                </a>
              </td>
              <td
                className="emotion-17"
              >
                100
              </td>
              <td>
                2019-11-07 01:38:36
              </td>
              <td
                className="emotion-17"
              >
                4
              </td>
              <td>
                <div
                  className="emotion-20"
                >
                  <a
                    className="emotion-19"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000955/errors"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <svg
                      color="#c92300"
                      data-file-name="warning.svg"
                      height={20}
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-26"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-25"
                  >
                    <div
                      className="emotion-21"
                    />
                    <div
                      className="emotion-22"
                    />
                    <div
                      className="emotion-23"
                    />
                    <div
                      className="emotion-39"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  className="emotion-28"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-27"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              className="emotion-29"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-45"
                >
                  Success
                </div>
              </td>
              <td>
                <a
                  className="emotion-16"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308a-67c2-1433-8fef-0a580a000955"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  test-whitespace.json
                </a>
              </td>
              <td
                className="emotion-17"
              >
                100
              </td>
              <td>
                2019-11-07 01:36:29
              </td>
              <td
                className="emotion-17"
              >
                4
              </td>
              <td>
                <div
                  className="emotion-20"
                >
                  <a
                    className="emotion-19"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308a-67c2-1433-8fef-0a580a000955/errors"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <svg
                      color="#c92300"
                      data-file-name="warning.svg"
                      height={20}
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-26"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-25"
                  >
                    <div
                      className="emotion-21"
                    />
                    <div
                      className="emotion-52"
                    />
                    <div
                      className="emotion-53"
                    />
                  </div>
                </div>
              </td>
              <td />
            </tr>
            <tr
              className="emotion-29"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-57"
                >
                  Archived
                </div>
              </td>
              <td>
                <a
                  className="emotion-16"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d53089-67c2-1433-8fef-0a580a000955"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  test-whitespace.json
                </a>
              </td>
              <td
                className="emotion-17"
              >
                100
              </td>
              <td>
                2019-11-07 01:35:36
              </td>
              <td
                className="emotion-17"
              >
                4
              </td>
              <td>
                <div
                  className="emotion-20"
                >
                  <a
                    className="emotion-19"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d53089-67c2-1433-8fef-0a580a000955/errors"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <svg
                      color="#c92300"
                      data-file-name="warning.svg"
                      height={20}
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-26"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-25"
                  >
                    <div
                      className="emotion-21"
                    />
                  </div>
                </div>
              </td>
              <td />
            </tr>
            <tr
              className="emotion-29"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-67"
                >
                  Failure
                </div>
              </td>
              <td>
                <a
                  className="emotion-16"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c0975970-62ef-1f81-83f8-0a580a000954"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  test_officer
                </a>
              </td>
              <td
                className="emotion-17"
              >
                100
              </td>
              <td>
                2019-10-11 21:11:03
              </td>
              <td
                className="emotion-17"
              >
                4
              </td>
              <td>
                <div
                  className="emotion-20"
                >
                  <a
                    className="emotion-19"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c0975970-62ef-1f81-83f8-0a580a000954/errors"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <svg
                      color="#c92300"
                      data-file-name="warning.svg"
                      height={20}
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-26"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-25"
                  >
                    <div
                      className="emotion-21"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  className="emotion-28"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-27"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              className="emotion-29"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-79"
                >
                  Paused
                </div>
              </td>
              <td>
                <a
                  className="emotion-16"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  test_officer
                </a>
              </td>
              <td
                className="emotion-17"
              >
                100
              </td>
              <td>
                2019-10-11 21:03:27
              </td>
              <td
                className="emotion-17"
              >
                4
              </td>
              <td>
                <div
                  className="emotion-20"
                >
                  <a
                    className="emotion-19"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/errors"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <svg
                      color="#c92300"
                      data-file-name="warning.svg"
                      height={20}
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-26"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-25"
                  >
                    <div
                      className="emotion-21"
                    />
                  </div>
                </div>
              </td>
              <td>
                <div
                  className="emotion-28"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-27"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              className="emotion-29"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-45"
                >
                  Success
                </div>
              </td>
              <td>
                <a
                  className="emotion-16"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/1585ca03-4db0-14d1-8edd-0a580a000926"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  flipbook_export_1
                </a>
              </td>
              <td
                className="emotion-17"
              >
                1
              </td>
              <td>
                2019-08-01 22:52:19
              </td>
              <td
                className="emotion-17"
              >
                4
              </td>
              <td />
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-26"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-25"
                  >
                    <div
                      className="emotion-95"
                    />
                  </div>
                </div>
              </td>
              <td />
            </tr>
            <tr
              className="emotion-29"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-45"
                >
                  Success
                </div>
              </td>
              <td>
                <a
                  className="emotion-16"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/be47702d-cbd6-1cce-a096-0a580a000920"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  export_7_8_2019
                </a>
              </td>
              <td
                className="emotion-17"
              >
                1
              </td>
              <td>
                2019-07-08 18:53:44
              </td>
              <td
                className="emotion-17"
              >
                4
              </td>
              <td />
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-26"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-25"
                  >
                    <div
                      className="emotion-21"
                    />
                  </div>
                </div>
              </td>
              <td />
            </tr>
            <tr
              className="emotion-29"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-45"
                >
                  Success
                </div>
              </td>
              <td>
                <a
                  className="emotion-16"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/be47702c-cbd6-1cce-a096-0a580a000920"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  export_7_8_2019___
                </a>
              </td>
              <td
                className="emotion-17"
              >
                1
              </td>
              <td>
                2019-07-08 18:43:03
              </td>
              <td
                className="emotion-17"
              >
                4
              </td>
              <td />
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-26"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-25"
                  >
                    <div
                      className="emotion-21"
                    />
                  </div>
                </div>
              </td>
              <td />
            </tr>
            <tr
              className="emotion-29"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-45"
                >
                  Success
                </div>
              </td>
              <td>
                <a
                  className="emotion-16"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd91540-08c1-199f-b899-0a580a00091e"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  sdlc-testdata-import.json
                </a>
              </td>
              <td
                className="emotion-17"
              >
                100
              </td>
              <td>
                2019-07-03 16:49:15
              </td>
              <td
                className="emotion-17"
              >
                4
              </td>
              <td />
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-26"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-25"
                  >
                    <div
                      className="emotion-21"
                    />
                  </div>
                </div>
              </td>
              <td />
            </tr>
            <tr
              className="emotion-29"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-45"
                >
                  Success
                </div>
              </td>
              <td>
                <a
                  className="emotion-16"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd9153f-08c1-199f-b899-0a580a00091e"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  sdlc-testdata-import.json
                </a>
              </td>
              <td
                className="emotion-17"
              >
                100
              </td>
              <td>
                2019-07-03 01:29:41
              </td>
              <td
                className="emotion-17"
              >
                4
              </td>
              <td>
                <div
                  className="emotion-20"
                >
                  <a
                    className="emotion-19"
                    href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd9153f-08c1-199f-b899-0a580a00091e/errors"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                  >
                    <svg
                      color="#c92300"
                      data-file-name="warning.svg"
                      height={20}
                    />
                  </a>
                </div>
              </td>
              <td
                style={
                  Object {
                    "minWidth": 244,
                    "overflow": "visible",
                  }
                }
              >
                <div
                  aria-label="Progress Bar"
                  className="emotion-26"
                  onKeyPress={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="button"
                  tabIndex="0"
                >
                  <div
                    className="emotion-25"
                  >
                    <div
                      className="emotion-21"
                    />
                    <div
                      className="emotion-95"
                    />
                  </div>
                </div>
              </td>
              <td />
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
       
    </div>
    <Pagination
      currentPage={1}
      totalPages={1}
    />
    <div>
       
    </div>
  </div>,
]
`;

exports[`<Jobs /> should render properly with no jobs 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-21 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-0 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4,
.emotion-4:hover,
.emotion-4:visited {
  background-color: #73b61c;
}

.emotion-4:hover {
  background-color: #96c955;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  padding-left: 4px;
}

.emotion-20 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-19 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-18 {
  height: 100%;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-18 tr {
  background-color: #252525;
}

.emotion-18 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-18 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-18 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-18 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-18 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-18 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-18 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-18 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-18 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-6 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-6:nth-of-type(2) {
  width: 100%;
}

.emotion-6:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-14 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-14:nth-of-type(2) {
  width: 100%;
}

.emotion-14:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-17 {
  height: 100%;
  pointer-events: none;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
    className="emotion-21"
  >
    <div
      className="emotion-5"
    >
      <h3
        className="emotion-0"
      >
        Number of 
        Jobs
        : 
        0
      </h3>
      <button
        className="emotion-4"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-3"
        >
          <svg
            className="emotion-1"
            color="#ffffff"
            data-file-name="refresh.svg"
            height={20}
          />
          <div
            className="emotion-2"
          >
            Refresh 
            Jobs
          </div>
        </div>
      </button>
    </div>
    <div
      className="emotion-20"
    >
      <div
        className="emotion-19"
      >
        <table
          className="emotion-18"
        >
          <thead>
            <tr>
              <th
                className="emotion-6"
              >
                Status
              </th>
              <th
                className="emotion-6"
              >
                Job Name
              </th>
              <th
                className="emotion-6"
              >
                Priority
              </th>
              <th
                className="emotion-6"
              >
                Created
              </th>
              <th
                className="emotion-6"
              >
                # Assets
              </th>
              <th
                className="emotion-6"
              >
                Errors
              </th>
              <th
                className="emotion-6"
              >
                Task Progress
              </th>
              <th
                className="emotion-14"
              >
                <div
                  className="emotion-13"
                >
                  <svg
                    data-file-name="kebab.svg"
                    height={20}
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="emotion-17"
            >
              <td
                colSpan={8}
              >
                <div
                  className="emotion-16"
                >
                  <div
                    className="emotion-15"
                  >
                    <svg
                      data-file-name="noJobs.svg"
                      width={200}
                    />
                    <div>
                      There are currently no jobs in the queue.
                    </div>
                    <div>
                      Any new job will appear here.
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
]
`;
